src/objects/Recommendations_Visibility__c.object
<CustomObject>
    <description>This custom object is used to manage the visibility of recommendations hightlights on the Portal for GCS</description>
    <fields>
        <fullName>ActionButtonLink__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;ProductRecommendation&apos;,
  IF(NOT(ISBLANK( ActionButton__c)),
     ActionButton__c,
     &apos;/IEC_ProductDetails?id=&apos; + Product__r.SAP_Material_Number__c
  ), 
   
IF(RecordType.DeveloperName = &apos;ServiceRecommendation&apos;,
   IF(NOT(ISBLANK( ActionButton__c)),
      ActionButton__c,
      IF (  PortalService__r.Requestable__c ,
        &apos;manage-service?serviceId=&apos; + PortalService__r.Id + &apos;&amp;openRequestService=true&apos;,
        &apos;manage-service?serviceId=&apos; + PortalService__r.Id
      )
   )
,
&apos;&apos;)
)</formula>
        <label>Action Button Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionButton__c</fullName>
        <label>Action Button</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Define the category of the account targeted for the recommendation</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic/Research Body</fullName>
                </value>
                <value>
                    <fullName>Agency Holding Company</fullName>
                </value>
                <value>
                    <fullName>Aircraft Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Airline Global Card Acquirer</fullName>
                </value>
                <value>
                    <fullName>Airline Holding Company</fullName>
                </value>
                <value>
                    <fullName>Airline Point of Sale</fullName>
                </value>
                <value>
                    <fullName>Airport Authority</fullName>
                </value>
                <value>
                    <fullName>Airport Concessionaire</fullName>
                </value>
                <value>
                    <fullName>Airport Operator</fullName>
                </value>
                <value>
                    <fullName>ANSP</fullName>
                </value>
                <value>
                    <fullName>Apartment and Villa Rental</fullName>
                </value>
                <value>
                    <fullName>Banking Service</fullName>
                </value>
                <value>
                    <fullName>Bus Line</fullName>
                </value>
                <value>
                    <fullName>Card Brand</fullName>
                </value>
                <value>
                    <fullName>Cargo only</fullName>
                </value>
                <value>
                    <fullName>Car Rental</fullName>
                </value>
                <value>
                    <fullName>Casino</fullName>
                </value>
                <value>
                    <fullName>CASS Associate</fullName>
                </value>
                <value>
                    <fullName>Caterer</fullName>
                </value>
                <value>
                    <fullName>Civil Aviation Authority</fullName>
                </value>
                <value>
                    <fullName>Consultancy Firm</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Cruise Line</fullName>
                </value>
                <value>
                    <fullName>Domestic Agent</fullName>
                </value>
                <value>
                    <fullName>DPC</fullName>
                </value>
                <value>
                    <fullName>Engine Manufacturer</fullName>
                </value>
                <value>
                    <fullName>ERSP Agent</fullName>
                </value>
                <value>
                    <fullName>Freight Forwarder Association</fullName>
                </value>
                <value>
                    <fullName>Fuel Supplier</fullName>
                </value>
                <value>
                    <fullName>General Aviation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Reference__c</fullName>
        <label>Content Reference</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_TR__c</fullName>
        <description>Turkish translation</description>
        <label>DescriptionLabel_TR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_ar__c</fullName>
        <description>Arabic translation</description>
        <label>DescriptionLabel_ar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_de__c</fullName>
        <description>German translation</description>
        <label>DescriptionLabel_de</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_en_US__c</fullName>
        <description>English translation</description>
        <label>DescriptionLabel_en_US</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_es__c</fullName>
        <description>Spanish translation</description>
        <label>DescriptionLabel_es</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_fr__c</fullName>
        <description>French translation</description>
        <label>DescriptionLabel_fr</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_in__c</fullName>
        <description>Indian translation</description>
        <label>DescriptionLabel_in</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_it__c</fullName>
        <description>Italian translation</description>
        <label>DescriptionLabel_it</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_ja__c</fullName>
        <description>Japanese translation</description>
        <label>DescriptionLabel_ja</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_ko__c</fullName>
        <description>Korean translation</description>
        <label>DescriptionLabel_ko</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_pt_BR__c</fullName>
        <description>Portuguese translation</description>
        <label>DescriptionLabel_pt_BR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_ru__c</fullName>
        <description>Russian translation</description>
        <label>DescriptionLabel_ru</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_th__c</fullName>
        <description>Thai translation</description>
        <label>DescriptionLabel_th</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_vi__c</fullName>
        <description>Vietnamese translation</description>
        <label>DescriptionLabel_vi</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionLabel_zh_CN__c</fullName>
        <description>Chinese translation</description>
        <label>DescriptionLabel_zh_CN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Start date of the recommendation</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Icon_URL__c</fullName>
        <description>Use to precise a specific picture/icon used for the record recommended</description>
        <label>Icon URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <description>Define the icon of the recommendation available on the Highlight panel</description>
        <formula>IF ( NOT(ISBLANK( Icon_URL__c )), IMAGE( Icon_URL__c , Name, 128 , 128 ), 
			IF(RecordType.DeveloperName = &apos;ProductRecommendation&apos;,  
						IMAGE( &quot;/resource/CSPortal/Images/ProductHighlight.JPG&quot;, Name, 130 , 350 ) , 
						IMAGE( &quot;/resource/CSPortal/Images/ServiceHighlight.JPG&quot; , Name, 130 , 350 )) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Important__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field it&apos;s for the user tells the system that Recommendation is important.</description>
        <inlineHelpText>The important are displayed first on the Portal.</inlineHelpText>
        <label>Important</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InformationButtonLink__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;ProductRecommendation&apos;,
  IF(NOT(ISBLANK( InformationButton__c)),
     InformationButton__c,
     &apos;/IEC_ProductDetails?id=&apos; + Product__r.SAP_Material_Number__c
  ),
IF(RecordType.DeveloperName = &apos;ServiceRecommendation&apos;,
   IF(NOT(ISBLANK( InformationButton__c)),
      InformationButton__c,        
      &apos;manage-service?serviceId=&apos; + PortalService__r.Id    
   ),&apos;&apos;)
)</formula>
        <label>Information Button Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InformationButton__c</fullName>
        <label>Information Button</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Define if the recommendation is active or not</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Contact_Request_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls if the Contact Request form will be visible in the content page for this recommendation</description>
        <label>Show Contact Request Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_More_Info_Banner_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls if the More Information Banner will be visible for the content page of this recommendation</description>
        <label>Show &quot;More Info&quot; Banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Queue__c</fullName>
        <description>All leads coming from this recommendation will be assigned to this queue</description>
        <label>Lead Queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>All opportunities coming form this recommendation will be assign to this user</description>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recommendations_Visibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PortalService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link between the service and the recommendation highlight</description>
        <label>Portal Service</label>
        <referenceTo>Portal_Applications__c</referenceTo>
        <relationshipLabel>Recommendations Visibility</relationshipLabel>
        <relationshipName>Recommendations_Visibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>Define the description used for a product recommended</description>
        <formula>Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Define the product related to the recommendation</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product selected is not &quot;Active&quot;</errorMessage>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Recommendations Visibility</relationshipLabel>
        <relationshipName>Recommendations_Visibility</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecommendationTitle__c</fullName>
        <description>Title of the Service, Product or Training recommended</description>
        <formula>IF(NOT(ISBLANK(Title__c)),Title__c,
  IF(ISBLANK( PortalService__c ), (IF ( ISBLANK( Product__c ), &quot;&quot;, Product__r.Name )),  PortalService__r.ServiceName__c ))</formula>
        <label>Recommendation Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>Define the sector of the account targeted for the recommendation</description>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Airline Supplier</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Freight Forwarder</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Equipment Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Financial Institution</fullName>
                </value>
                <value>
                    <fullName>General Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Governmental Institution</fullName>
                </value>
                <value>
                    <fullName>Holding Company</fullName>
                </value>
                <value>
                    <fullName>IATA</fullName>
                </value>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>Internal Use</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Non-Airline Transportation</fullName>
                </value>
                <value>
                    <fullName>Recreational</fullName>
                </value>
                <value>
                    <fullName>Travel Agent</fullName>
                </value>
                <value>
                    <fullName>General Public</fullName>
                </value>
                <value>
                    <fullName>Infrastructure Partner</fullName>
                    <isActive>false</isActive>
                    <label>Infrastructure Partner</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Description__c</fullName>
        <description>Define the description used for a service recommended</description>
        <formula>PortalService__r.Service_Description__c</formula>
        <label>Service Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Start date of the recommendation</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Customizable title that will override the default recommendation title( product/service name)</description>
        <label>Title</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <formula>(NOT(ISBLANK(PortalService__c)) || NOT(ISBLANK(Product__c)) &amp;&amp; Product__r.IsActive) &amp;&amp; IsActive__c &amp;&amp; (StartDate__c &lt;= TODAY() &amp;&amp; EndDate__c &gt;= TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Recommendation Visibility</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>RecommendationTitle__c</columns>
        <columns>Visible__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Products_recommendations</fullName>
        <columns>NAME</columns>
        <columns>RecommendationTitle__c</columns>
        <columns>Product__c</columns>
        <columns>IsActive__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Products recommendations</label>
    </listViews>
    <listViews>
        <fullName>Services_Recommendation</fullName>
        <columns>NAME</columns>
        <columns>RecommendationTitle__c</columns>
        <columns>PortalService__c</columns>
        <columns>IsActive__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PortalService__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Services Recommendation</label>
    </listViews>
    <nameField>
        <displayFormat>Rec-{0000000}</displayFormat>
        <label>Recommendations_Visibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations Visibility</pluralLabel>
    <recordTypes>
        <fullName>ProductRecommendation</fullName>
        <active>true</active>
        <description>Define the record type used for all products recommended on the highlight panel</description>
        <label>Product Recommendation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ServiceRecommendation</fullName>
        <active>true</active>
        <description>Record type for all Services on highlights panel</description>
        <label>Service Recommendation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Default_Owners</fullName>
        <active>true</active>
        <description>If the contact request form is visible, a default queue for leads and a default owner for opportunities needs to be set</description>
        <errorConditionFormula>Is_Contact_Request_Visible__c &amp;&amp;  (ISBLANK( Lead_Queue__c )  || ISBLANK( Opportunity_Owner__c ) )</errorConditionFormula>
        <errorMessage>You need to set a queue and a default owner for the records generating from the form.</errorMessage>
    </validationRules>
</CustomObject>